complete upload file and parse data to render

--- a/src/style.less
+++ b/src/style.less
@@ -8,3 +8,21 @@ body,
 #root {
   height: 100%;
 }
+
+
+.App {
+  display: flex;
+  .left_wrapper {
+
+  }
+  .right_wrapper{
+    width: 100%;
+    .top {
+
+    }
+    .bottom{
+
+    }
+
+  }
+}
