--- a/src/style.less
+++ b/src/style.less
@@ -3,6 +3,7 @@
   padding: 0;
 }
 
+
 html,
 body,
 #root {
@@ -16,7 +17,8 @@ body,
 
   }
   .right_wrapper{
-    width: 100%;
+    width: 101%;
+    overflow-x: hidden;
     .top {
 
     }
