--- a/src/components/LyTabs/tab.less
+++ b/src/components/LyTabs/tab.less
@@ -4,3 +4,14 @@
     margin-right: -1000px;
     margin-top: -1000px;
 }
+.tabs{
+    height: 50vh;
+    overflow-y: scroll;
+}
+.ant-table-content{
+    overflow: inherit !important;
+}
+
+.ant-table-thead > tr > th, .ant-table-tbody > tr > td, .ant-table tfoot > tr > th, .ant-table tfoot > tr > td {
+    padding: 5px 16px !important;
+}
