--- a/src/style.less
+++ b/src/style.less
@@ -13,18 +13,16 @@ body,
 
 .App {
   display: flex;
-  .left_wrapper {
 
-  }
-  .right_wrapper{
+  .left_wrapper {}
+
+  .right_wrapper {
     width: 101%;
     overflow-x: hidden;
-    .top {
 
-    }
-    .bottom{
+    .top {}
 
-    }
+    .bottom {}
 
   }
 }
