render single select data to echarts component

--- a/src/style.less
+++ b/src/style.less
@@ -22,7 +22,11 @@ body,
 
     .top {}
 
-    .bottom {}
+    .bottom {
+      // width: 90%;
+      margin-left: 20px;
+      margin-right: 30px;
+    }
 
   }
 }
