--- a/src/style.less
+++ b/src/style.less
@@ -20,12 +20,14 @@ body,
     width: 101%;
     overflow-x: hidden;
 
-    .top {}
+    .top {
+      .draw_button{
+        margin-right: 10px;
+      }
+    }
 
     .bottom {
-      // width: 90%;
-      margin-left: 20px;
-      margin-right: 30px;
+      margin: 20px 20px 0 30px;
     }
 
   }
