--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -75,7 +75,9 @@ body,
 .tags_wrapper {
   margin: 10px 0;
 }
-
+.file_input_wrapper{
+  margin-left: -100000px;
+}
 .input_wrapper {
   display: flex;
   margin-top: 20px;
