--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -114,8 +114,8 @@ body,
 }
 
 
-@ExpendBgColor: #C6DCE4;
-@SummaryBgColor: #F47C7C;
+@ExpendBgColor: #EEEEEE;
+@SummaryBgColor: #C6DCE4;
 
 .row_item_content_by_self{
   background-color: @ExpendBgColor;
