change width about minisearch

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -39,14 +39,20 @@ body,
           flex: 1;
           display: flex;
           justify-content: space-between;
+          .btn_wrapper{
+            margin-left: -10px;
+            button{
+              margin-left: 10px;
+            }
+          }
           .draw_button {
             // margin-right: 1px;
           }
         }
 
         .mini_search {
-          background-color: #ccc;
-          flex: 1;
+          // background-color: #ccc;
+          flex: 2;
           margin-left: 10px;
           input {
             color: #2E0249;
