--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -79,6 +79,9 @@ body,
         display: flex;
         flex-direction: column;
         z-index: 99999999;
+        .icon-shujushujudian.gray{
+          color: #ccc;
+        }
         .base-func{
           color: #3AB4F2;
         }
