--- a/src/icons/iconfont.css
+++ b/src/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3556760 */
-  src: url('iconfont.woff2?t=1659150243295') format('woff2'),
-       url('iconfont.woff?t=1659150243295') format('woff'),
-       url('iconfont.ttf?t=1659150243295') format('truetype');
+  src: url('iconfont.woff2?t=1660029620747') format('woff2'),
+       url('iconfont.woff?t=1660029620747') format('woff'),
+       url('iconfont.ttf?t=1660029620747') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shujushujudian:before {
+  content: "\e649";
 }
 
 .icon-suoding:before {
